multiple changes and docker file added